--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.38",
     "@transmute/did-wallet": "0.0.0-5",
     "base-x": "^3.0.7",
+    "base64url": "^3.0.1",
     "base64url-universal": "^1.1.0",
     "brace": "^0.11.1",
     "clsx": "^1.0.4",
@@ -21,6 +22,7 @@
     "isomorphic-webcrypto": "^2.3.2",
     "jsonld": "^1.7.0",
     "jsonschema": "^1.2.4",
+    "lodash": "^4.17.15",
     "material-table": "^1.54.1",
     "node-fetch": "^2.6.0",
     "node-forge": "^0.9.1",
@@ -41,6 +43,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "vc-js": "^0.3.0",
     "x25519-key-pair": "github:digitalbazaar/x25519-key-pair#initial"
   },
   "scripts": {
